include $(top_srcdir)/common.mk

noinst_LTLIBRARIES =

noinst_LTLIBRARIES += libconfig.la
libconfig_la_SOURCES = libconfig.c libconfig.h grammar.c grammar.h scanctx.c scanctx.h scanner.c scanner.h strbuf.c strbuf.h strvec.c strvec.h util.c parsectx.h util.h wincompat.c wincompat.h
#libconfig_la_SOURCES += grammar.y scanner.l
libconfig_la_CXXFLAGS = $(AM_CXXFLAGS)

